--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
   </div>
 
-  <a class="item" href="/index.html">Home</a>
+  <a class="item" href="index.html">Home</a>
 
-  <a class="item" href="/house.html">House</a>
+  <a class="item" href="house.html">House</a>
 
-  <a class="item" href="/post">Saturday Night</a>
+  <a class="item" href="post">Saturday Night</a>
   
 
 </div>
