--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
   </div>
 
-  <a class="item" href="index.html">Home</a>
+  <a class="item" href="./index.html">Home</a>
 
-  <a class="item" href="house.html">House</a>
+  <a class="item" href="./house.html">House</a>
 
   <a class="item" href="post">Saturday Night</a>
   
