--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <a class="item" href="./house.html">House</a>
 
-  <a class="item" href="post">Saturday Night</a>
+  <a class="item" href="">Saturday Night</a>
   
 
 </div>
