--- a/house.html
+++ b/house.html
@@ -49,6 +49,8 @@
             <div class="six wide column" id="info">
 
                 <h3>Dates: Friday, October 12th - Sunday, October 14th</h3>
+                <h3>Check In: TBD (Hostess is flexible)</h3>
+                <h3>Check Out: 2 PM Sunday</h3>
                 <h3>Address: 28072 Farm Road 1267
                     <br>
                     Shell Knob, MO 65747
